fix doctype and wrong import

--- a/load_random_user.html
+++ b/load_random_user.html
@@ -1,4 +1,4 @@
-<script src="https://unpkg.com/vue@next"></script>
+<!DOCTYPE html>
 <html lang="zh-Hant-TW">
   <head>
     <meta charset="UTF-8" />
